--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -6,8 +6,9 @@
   color: white;
   padding: 1rem;
   position: relative;
-  cursor: pointer;
+  cursor: default;
 }
+
 .CompactCard:hover {
   box-shadow: none !important;
 }
@@ -20,18 +21,22 @@
   justify-content: flex-end;
   gap: 1rem;
 }
+
 .CircularProgressbar {
   width: 4rem !important;
   overflow: visible;
 }
+
 .CircularProgressbar-path {
   stroke: white !important;
   stroke-width: 12px !important;
   filter: drop-shadow(2px 4px 6px white);
 }
+
 .CircularProgressbar-trail {
   display: none;
 }
+
 .CircularProgressbar-text {
   fill: white !important;
 }
@@ -54,6 +59,7 @@
   font-size: 22px;
   font-weight: bold;
 }
+
 .detail > span:nth-child(3) {
   font-size: 12px;
 }
@@ -72,12 +78,14 @@
   justify-content: space-around;
   padding: 1rem;
 }
+
 .ExpandedCard > span:nth-of-type(1) {
   color: white;
   font-size: 26px;
   font-weight: bold;
   text-shadow: 0px 0px 15px white;
 }
+
 .ExpandedCard > span:nth-of-type(2) {
   color: rgb(236, 236, 236);
   font-size: 15px;
