--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 :root {
-  --yellow: linear-gradient(180deg, #F8D49A -146.42%, #FAD79D -46.42%);
+  --yellow: linear-gradient(180deg, hsl(37, 87%, 79%) -146.42%, #fffeb3 -46.42%);
   --orange: #fca61f;
   --black: #242d49;
   --gray: #788097;
